force-app/main/default/objects/Object_Metadata__c/Object_Metadata__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Captures information about objects that would otherwise be hard to obtain, even with code. Useful for flows.

Used in: 
- &apos;Approval Process: Approver&apos;s Queue&apos; to filter results by a specific object, as object name is not readily available in underlying system data.</description>
    <label>Object Metadata</label>
</CustomObject>