force-app/main/default/objects/Object_Metadata__c/fields/I_RS_Deletion_Blocker_Check_Formula__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Deletion_Blocker_Check_Formula__c</fullName>
    <description>If the formula field specific equates to false, then a deletion of the given record is invalid and should be blocked in code.</description>
    <inlineHelpText>If the formula field specific equates to false, then a deletion of the given record is invalid and should be blocked in code.</inlineHelpText>
    <label>Deletion Blocker Check-Formula</label>
    <length>43</length>
    <type>Text</type>
</CustomField>