force-app/main/default/objects/Object_Metadata__c/fields/I_RS_Deletion_Blocker_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Deletion_Blocker_Error_Message__c</fullName>
    <description>The specific error message to appear if a deletion fails</description>
    <label>Deletion Blocker Error Message</label>
    <type>TextArea</type>
</CustomField>