force-app/main/default/objects/Object_Metadata__c/fields/I_RS_Enable_Deletion_Blocker__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Enable_Deletion_Blocker__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, invalid deletions will be prevented. Validity is provided through specified formula field</description>
    <inlineHelpText>If checked, invalid deletions will be prevented. Validity is provided through specified formula field</inlineHelpText>
    <label>Enable Deletion-Blocker</label>
    <type>Checkbox</type>
</CustomField>