force-app/main/default/objects/Object_Metadata__c/fields/I_RS_Hide_Appr_Comments_for_Researchers__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Hide_Appr_Comments_for_Researchers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>In the &apos;Approval: Show Comments&apos; flow, hide the UI for this particular object. This is currently used on Appointment of Examiners on the researcher portal.</description>
    <label>Hide Approval Comments for Researchers</label>
    <type>Checkbox</type>
</CustomField>