force-app/main/default/objects/Object_Metadata__c/fields/I_RS_Object_Label_Plural__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Object_Label_Plural__c</fullName>
    <description>Use for UI representation, e.g. &apos;Project Proposals&apos;</description>
    <inlineHelpText>Use for UI representation, e.g. &apos;Project Proposals&apos;</inlineHelpText>
    <label>Object Label - Plural</label>
    <length>60</length>
    <type>Text</type>
</CustomField>