force-app/main/default/objects/Object_Metadata__c/fields/I_RS_Object_Label_Singular__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Object_Label_Singular__c</fullName>
    <description>Object label. Use for UI display.</description>
    <inlineHelpText>Object label. Use for UI display. e.g. Project Proposal</inlineHelpText>
    <label>Object Label - Singular</label>
    <length>60</length>
    <type>Text</type>
</CustomField>