force-app/main/default/objects/Object_Metadata__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>I_RS_First_3_Characters_on_Record_Ids__c</columns>
    <columns>I_RS_Object_Label_Plural__c</columns>
    <columns>I_RS_Object_Label_Singular__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>